fix: header appearing broken in 404 page

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,8 +1,10 @@
 {{ partial "head" . }}
 	<body id="top">
-		<header>
-			{{ partial "header" . }}
-		</header>
+		{{ if ne .Kind "404"}}
+			<header>
+				{{ partial "header" . }}
+			</header>
+		{{ end }}
 
 		{{ "<!-- Main -->" | safeHTML }}
 		<div id="main">
