--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,12 +1,14 @@
 <div class="logo-block">
 	{{ $image := resources.Get "images/large.png" }}
-	<img src="{{ $image.RelPermalink }}" alt="Ashirt Logo">
-	<p>Ashirt</p>
+	<div class="logo">
+		<img src="{{ $image.RelPermalink }}" alt="Ashirt Logo" />
+		<p>Ashirt</p>
+	</div>
 </div>
 <div class="info-block">
 	<p class="header-title">{{ .Title }}</p>
 	<p class="header-subtitle">{{ .Description }}</p>
 	{{ if eq .Kind "home"}}
-		<button class="download-button">Download Ashirt</button>
+		<a class="download-button">Download Ashirt</a>
 	{{ end }}
 </div>
