--- a/layouts/partials/section.html
+++ b/layouts/partials/section.html
@@ -1,3 +1,19 @@
 <section class="page">
-  {{ .Content }} 
+	<div class="subtitle">
+		<p>{{ .Params.Subtitle }}</p>
+	</div>
+
+	<div class="cards-group">
+		{{ range .Params.Cards }}
+      {{ partial "card.html" . }}
+    {{ end }}
+	</div>
+
+	{{ if eq .Kind "home"}}
+    <a href="/install" class="next-button">Next</a>
+	{{ end }}
+
+  <div class="content">
+    {{ .Content }}
+  </div>
 </section>
