--- a/assets/scss/buttons.scss
+++ b/assets/scss/buttons.scss
@@ -1,3 +1,12 @@
+button {
+	border-radius: 2px;
+	border: 1px solid #5daceb;
+	background-color: #5daceb;
+	text-transform: uppercase;
+	color: #ffffff;
+	cursor: pointer;
+}
+
 .done-button {
 	justify-self: flex-end;
 	align-self: flex-end;
