feat: add support page with toggle content buttons

--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -1,17 +1,44 @@
+#active-button {
+	background-color: #5daceb;
+	color: black;
+}
+
+#inactive-button {
+	background-color: transparent;
+	color: #5DACE8;
+}
+
+.support-buttons > button:first-child {
+	margin-right: 76px;
+}
+
+.support-buttons {
+	display: flex;
+	justify-content: space-around;
+}
+
+.support-buttons button {
+	width: 100px;
+	height: 40px;
+}
+
 .download-button {
+	width: 150px;
+	height: 25px;
+	text-transform: uppercase;
+	color: #5DACE8;
+}
+
+.download-button, .support-buttons button {
 	text-decoration: none;
 
 	display: flex;
 	align-items: center;
 	justify-content: center;
 
-	width: 150px;
-	height: 25px;
-	color: #5DACE8;
 	border: 2px solid #5DACE8;
 	border-radius: 2px;
 	background: transparent;
-	text-transform: uppercase;
 	padding: 5px 20px;
 
 	font-family: Inter;
