--- a/assets/scss/buttons.scss
+++ b/assets/scss/buttons.scss
@@ -1,3 +1,8 @@
+button:hover, .next-button:hover, .done-button:hover, .card-button:hover {
+	text-decoration: underline;
+	color: black;
+}
+
 button {
 	border-radius: 2px;
 	border: 1px solid #5daceb;
