--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,6 +1,6 @@
 {{ partial "head" . }}
 	<body id="top">
-		{{ if ne .Kind "404"}}
+		{{ if (and (ne .Kind "home") (ne .Kind "404")) }}
 			<header>
 				{{ partial "header" . }}
 			</header>
