feat: add support, banner menu and some refactoring (#4)
* feat: add banner menu and change header logo

* feat: add osx and linux codeblocks and copy code buttons

* feat: add default button styles

* feat: add support page with toggle content buttons

* chore: remove duplicated styles definition

* feat: add styles for code blocks

* feat: add js scripts to page

* refactor: remove done button from installation pages

* chore: add scripting of faq css styles

* feat: add faq layout

* feat: add support buttons to header

* feat: add version fetcher to automatically update download links

* feat: add favicon to be shown at github pages

* feat: add hover actions to buttons and remove root page

* chore: remove not rendering header on home

---------

Co-authored-by: Lucas Lemos <lucashenriqueblemos@gmail>

--- a/assets/scss/buttons.scss
+++ b/assets/scss/buttons.scss
@@ -1,3 +1,17 @@
+button:hover, .next-button:hover, .done-button:hover, .card-button:hover {
+	text-decoration: underline;
+	color: black;
+}
+
+button {
+	border-radius: 2px;
+	border: 1px solid #5daceb;
+	background-color: #5daceb;
+	text-transform: uppercase;
+	color: #ffffff;
+	cursor: pointer;
+}
+
 .done-button {
 	justify-self: flex-end;
 	align-self: flex-end;
