--- a/layouts/_default/faq.html
+++ b/layouts/_default/faq.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 
 	<div class="container">
-		<div class="content">
+		<div class="faq-content">
 			{{ .Content }}
 		</div>
 	</div>
