--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -1,9 +1,9 @@
-#active-button {
+.active {
 	background-color: #5daceb;
 	color: black;
 }
 
-#inactive-button {
+.inactive {
 	background-color: transparent;
 	color: #5DACE8;
 }
@@ -38,7 +38,6 @@
 
 	border: 2px solid #5DACE8;
 	border-radius: 2px;
-	background: transparent;
 	padding: 5px 20px;
 
 	font-family: Inter;
