refactor: change logo, support, faq and home pages

--- a/layouts/partials/section.html
+++ b/layouts/partials/section.html
@@ -9,7 +9,7 @@
     {{ end }}
 	</div>
 
-	{{ if eq .Page.RelPermalink "/getting-started/"}}
+	{{ if eq .Page.RelPermalink "/"}}
     <a href="/install" class="next-button">Next</a>
 	{{ end }}
 
