--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -1,3 +1,12 @@
+.logo-svg {
+	color: white;
+	margin: 0;
+	width: 60px;
+	height: 50px;
+	align-self: center;
+	justify-self: center;
+}
+
 .active {
 	background-color: #5daceb;
 	color: black;
@@ -75,6 +84,7 @@
 }
 
 .logo {
+	margin-top: 5px;
 	margin-left: 20px;
 	align-items: center;
 	justify-content: center;
