--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -3,10 +3,12 @@
 	<a href="/">
 		<div class="logo">
 			<img class="logo-svg" src="{{ $image.RelPermalink }}" alt="Ashirt Logo" />
-			<p>Ashirt</p>
 		</div>
 	</a>
 	<div class="menu-items">
+		<div class="item">
+			<a href="/">Ashirt</a>
+		</div>
 		<div class="item">
 			<a target="_blank" href="https://github.com/ashirt-ops/ashirt-server/wiki/quickstart">Server Docs</a>
 		</div>
