--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,12 +2,12 @@
 	{{ $image := resources.Get "images/ashirt.svg" }}
 	<a href="/">
 		<div class="logo">
-			<img class="logo-svg" src="{{ $image.RelPermalink }}" alt="Ashirt Logo" />
+			<img class="logo-svg" src="{{ $image.RelPermalink }}" alt="ASHIRT Logo" />
 		</div>
 	</a>
 	<div class="menu-items">
 		<div class="item">
-			<a href="/">Ashirt</a>
+			<a href="/">ASHIRT</a>
 		</div>
 		<div class="item">
 			<a target="_blank" href="https://github.com/ashirt-ops/ashirt-server/wiki/quickstart">Server Docs</a>
